Fix desktop dropdown menus overflow

--- a/app/assets/stylesheets/menu.scss
+++ b/app/assets/stylesheets/menu.scss
@@ -113,7 +113,8 @@
 
     a {
       overflow: hidden;
-      width: 300px;
+      min-width: 150px;
+      max-width: 600px;
     }
   }
 }
@@ -129,7 +130,7 @@
 
   .dropdown-menu {
     a {
-      width: 150px;
+      min-width: 150px;
     }
   }
 }
